--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "ios:clean": "cd ios && rm -rf Pods && pod cache clean --all && arch -x86_64 pod install && cd ..",
+    "gradlew": "cd ./android && ./gradlew app:assembleDebug && ./gradlew installDebug",
+    "aos:clean": "cd android && ./gradlew clean && cd ..",
+    "pod": "cd ios && arch -x86_64 pod install --repo-update && cd ..",
   },
   "dependencies": {
     "react": "18.0.0",
