--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "prettier": "^2.8.4",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
