--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "pod": "cd ios && arch -x86_64 pod install --repo-update && cd ..",
     "prepare": "husky install"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": [
+        "./husky/pre-commit"
+      ]
+    }
+  },
   "dependencies": {
     "react": "18.0.0",
     "react-native": "0.69.5"
