--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^26.6.3",
