loadash filter init

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   },
   "dependencies": {
+    "lodash.filter": "^4.6.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-search-bar": "^3.5.1",
