--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-search-bar": "^3.5.1",
+    "react-native-search-filter": "^0.1.5",
     "react-native-search-input": "^0.0.6"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash.filter": "^4.6.7",
     "@types/react-native": "^0.69.5",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
